err/collective.types.externalsearch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/DataGridField'...
Compiling './lib/python3.5/site-packages/Products/DataGridField/Column.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/Column.py", line 68
    raise AttributeError, "Class %s has no default_method %s" % (str(context), self.default_method)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/DataGridWidget.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/DataGridWidget.py", line 68
    raise AttributeError, "DataGridWidget missing column definition for " + id + " in field " + field.getName()
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/HelpColumn.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/HelpColumn.py", line 42
    raise AttributeError, "Class %s is missing vocabulary function %s" % (str(instance), self.vocabulary)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/DataGridField/SelectColumn.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/SelectColumn.py", line 45
    raise AttributeError, "Class %s is missing vocabulary function %s" % (str(instance), self.vocabulary)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/DataGridField/examples'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/de'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/en'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/es'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/fr'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/it'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/nl'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/pt_BR'...
Listing './lib/python3.5/site-packages/Products/DataGridField/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/default'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/example'...
Listing './lib/python3.5/site-packages/Products/DataGridField/profiles/example/types'...
Listing './lib/python3.5/site-packages/Products/DataGridField/skins'...
Listing './lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget'...
Compiling './lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget/queryDataGrid.py'...
***   File "./lib/python3.5/site-packages/Products/DataGridField/skins/DataGridWidget/queryDataGrid.py", line 26
    return query(obj, *args)
                           ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/DataGridField/tests'...
Listing './lib/python3.5/site-packages/Products.DataGridField-1.9.6.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/types'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/Extensions'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/browser'...
Compiling './lib/python3.5/site-packages/collective/types/externalsearch/browser/util.py'...
***   File "./lib/python3.5/site-packages/collective/types/externalsearch/browser/util.py", line 25
    except Exception, msg1:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/types/externalsearch/content'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/profiles'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/profiles/default'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/skins'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/skins/cte_templates'...
Listing './lib/python3.5/site-packages/collective/types/externalsearch/tests'...
Compiling './lib/python3.5/site-packages/collective/types/externalsearch/tests/test_collage.py'...
***   File "./lib/python3.5/site-packages/collective/types/externalsearch/tests/test_collage.py", line 101
    print """Warning: collective.types.externalsearch
        could not be tested with Collage because Collage
        is not available"""
                                                     
                                                        
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective.types.externalsearch-11.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
